# gf3d_plusplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gf3d++.sln  gf3d++.vcxproj  gf3d++.vcxproj.filters
application/: CMakeLists.txt
assets/shaders/: shader.vert  test.shader  vert.spv
engine/: CMakeLists.txt  defines.hpp  entry.h
engine/containers/: forward_list.hpp  stack_list.hpp  vector.hpp
engine/core/: GameObject.h  NonCopyable.h  application.cpp  application.h  gf3d_assert.hpp  gf3d_camera.cpp  gf3d_camera.h  gf3d_logger.cpp  gf3d_logger.h  gf3d_memory.cpp  gf3d_memory.h  gf3d_time.cpp  gf3d_time.hpp  transform.h
engine/math/: gf3d_math.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math_constants.hpp  math_functions.cpp  math_functions.hpp  quaternion.hpp  trigonometric_functions.cpp  trigonometric_functions.hpp  vec2.hpp  vec3.hpp  vec4.hpp
engine/memory/: Allocator.hpp  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  gf3d_memory.hpp
engine/platform/: gf3d_window.cpp  gf3d_window.h
engine/renderer/: gf3d_device.cpp  gf3d_device.h  gf3d_graphics.cpp  gf3d_graphics.h  gf3d_material.cpp  gf3d_material.h  gf3d_material_system.cpp  gf3d_material_system.h  gf3d_mesh.cpp  gf3d_mesh.h  gf3d_pipeline.cpp  gf3d_pipeline.h  gf3d_shader.cpp  gf3d_shader.h  gf3d_swapchain.cpp  gf3d_swapchain.h  gf3d_validations.cpp  gf3d_validations.h  vulkan_functions.cpp  vulkan_functions.h  vulkan_image.cpp  vulkan_image.h  vulkan_types.h
engine/resources/: gf3d_resource.h  gf3d_texture.h
engine/systems/: shader_system.cpp  texture_system.cpp  texture_system.h
include/: Application.h  Debug.h  GameObject.h  NonCopyable.h  gf3d_camera.h  gf3d_descriptor.h  gf3d_device.h  gf3d_graphics.h  gf3d_logger.h  gf3d_material.h  gf3d_material_system.h  gf3d_math.h  gf3d_mesh.h  gf3d_pipeline.h  gf3d_shader.h  gf3d_singleton.h  gf3d_swapchain.h  gf3d_validations.h  gf3d_window.h  hello_triangle.h  vector2.h  vector3.h  vulkan_functions.h
scripts/: get_debug_libs.py
shaders/: shader.vert  vert.spv
src/: Application.cpp  Debug.cpp  gf3d_camera.cpp  gf3d_device.cpp  gf3d_graphics.cpp  gf3d_logger.cpp  gf3d_material.cpp  gf3d_material_system.cpp  gf3d_math.cpp  gf3d_mesh.cpp  gf3d_pipeline.cpp  gf3d_shader.cpp  gf3d_swapchain.cpp  gf3d_validations.cpp  gf3d_window.cpp  main.cpp  vector2.cpp  vector3.cpp
tests/: CMakeLists.txt
tests/src/: test_forward_list.cpp  test_forward_list.hpp  test_linear_allocator.cpp  test_linear_allocator.hpp  test_macros.hpp  test_manager.cpp  test_manager.hpp  test_object.hpp  test_vector.cpp  test_vector.hpp  tests_main.cpp
